--- a/test.html
+++ b/test.html
@@ -16,20 +16,52 @@
 
 <body>
 
+    <div class="container"></div>
+    <div class="row hide">
+        <div class='col-md-12 hide'>
+            <div id="hide">
+                <button id="startGame">Start Game</button>
+            </div>
+        </div>
+    </div> 
+
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1 class="header">I'll Be There For You</h1>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row">
             <div class="col-md-12">
-                <div id='quiz'></div>
-                <button id='submit'></button>
-                <div id='results'></div>
-
+                <div class="gameSpace timer">
+                    <div id="show-number"></div>
+                    <!-- <button id="startQuiz">Start</button>
+                    <button id="stop">Stop</button>
+                    <button id="resume">Resume</button> -->
+                </div>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 gameSpace">
+                <div id="quiz"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 gameSpace">
+                <div class="endGame">SHOW THIS NOW</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 gameSpace resultsDiv">
+                <button id="submit">Get Results</button>
+                <div id="results"></div>
+            </div>
+        </div>
+    </div>
 
 
-        <script src='test.js'></script>
+    <script src='test.js'></script>
+
 </body>
