--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
     </div>
 
 
-    <script src='/assets/javascript/app.js'></script>
+    <script src='assets/javascript/app.js'></script>
 
 </body>
